# CNN

./: .gitignore  CMakeLists.txt  CNN.hxx  README.md
classes/: Model.hxx  Model_impl.hxx  prereqs.hxx
classes/activation functions/: activation_types.hxx  relU.hxx  sigmoid.hxx  tanh.hxx
classes/datasets/: dataset.hxx
classes/helpers/: pair.hxx  progress_bar.hxx  visitors.hxx
classes/layers/: convolution.hxx  convolution_impl.hxx  layer.hxx  layer_types.hxx  linear.hxx  linear_impl.hxx  max_pool.hxx  max_pool_impl.hxx  max_pooling.hxx  max_pooling_impl.hxx  mean_pool.hxx  mean_pool_impl.hxx  mean_pooling.hxx  mean_pooling_impl.hxx  relU.hxx  relU_impl.hxx  sigmoid.hxx  sigmoid_impl.hxx  softmax.hxx  tanh.hxx  tanh_impl.hxx
classes/lin_alg/: cuboid.hxx  cuboid_impl.hxx  data_types.hxx  lin_alg_kernels.hxx  mat.hxx  mat_impl.hxx  miscellaneous_helpers.hxx  vector.hxx  vector_impl.hxx
classes/loss functions/: cross_entropy.hxx  loss_functions.hxx  mean_square_error.hxx
classes/optimizers/: SGD.hxx  momentum.hxx  optimizers.hxx
cmake/: CNN-config.cmake
include/: CMakeLists.txt
include/cnn/: Model.hxx  Model_impl.hxx  prereqs.hxx
include/cnn/classes/: Model.hxx  Model_impl.hxx
include/cnn/classes/datasets/: dataset.hxx
include/cnn/classes/helpers/: progress_bar.hxx  visitors.hxx
include/cnn/classes/layers/: convolution.hxx  convolution_impl.hxx  linear_impl.hxx  mean_pooling_impl.hxx  softmax.hxx
include/cnn/classes/lin_alg/: data_types.hxx  miscellaneous_helpers.hxx  vector_impl.hxx
include/cnn/classes/loss functions/: cross_entropy.hxx
include/cnn/datasets/: dataset.hxx
include/cnn/helpers/: im2col.hxx  pair.hxx  visitors.hxx
include/cnn/layers/: convolution.hxx  convolution_impl.hxx  layer.hxx  linear.hxx  linear_impl.hxx  max_pooling.hxx  max_pooling_impl.hxx  mean_pooling.hxx  mean_pooling_impl.hxx  relU.hxx  relU_impl.hxx  sigmoid.hxx  sigmoid_impl.hxx  softmax.hxx  tanh.hxx  tanh_impl.hxx
include/cnn/lin_alg/: array.hxx  array_impl.hxx  cuboid_impl.hxx  data_types.hxx  mat_impl.hxx
include/cnn/loss_functions/: cross_entropy.hxx  loss_functions.hxx  mean_square_error.hxx
include/cnn/optimizers/: SGD.hxx
mnist/: read_mnist.hxx  read_mnist_impl.cpp  read_mnist_impl.cu
standalone_example/: CMakeLists.txt  README.md  model_test.cpp
standalone_example/mnist/: read_mnist.hxx  read_mnist_impl.cpp
standalone_example/models/: model1.cpp  model2.cpp  model_test.cpp
testing/: convolution_test.cpp  convolution_test.cu  linalg_test.cpp  linear_test.cpp  linear_test.cu  maxpool_test.cpp  maxpool_test.cu  meanpool_test.cpp  meanpool_test.cu  model_test.cpp  progress_bar_test.cu  readmnist_test.cpp
